Bug 402776 - The setting dialog disappears when switching between modes several times
Summary: The setting dialog disappears when switching between modes several times
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-02 03:07 UTC by trmdi
Modified: 2019-01-19 15:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video (173.21 KB, video/mp4)
2019-01-02 03:07 UTC, trmdi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description trmdi 2019-01-02 03:07:50 UTC
Created attachment 117235 [details]
video

The setting dialog disappears when switching between modes several times.
Please see the video.

Anyways, the new ui of the setting dialog looks very nice!
Comment 1 Michail Vourlakos 2019-01-02 11:21:11 UTC
> Anyways, the new ui of the setting dialog looks very nice!

I am trying to follow the following for the settings window
"Simple to understand, Elegant to interact"

> The setting dialog disappears when switching between modes several times.

problem is that even though it occured in my system some times I havent found a concrete way to reproduce. And as of today with latest master I can not reproduce at all , it needs investigation why this happens
Comment 2 trmdi 2019-01-02 15:11:27 UTC
Yes, it's more difficult to reproduce the bug on the latest git version.
More specifically, you have to repeat the switching action more times to reproduce it, about < 15 times on my system.

1, When it happens, the previous switching action was always from Advanced:on -> Advanced:off
with the debug output:
> [debug 21:55:42.859859] - SecDockConfigView deleting ...
> [warning 21:55:42.997997] - "" doesn't have any WindowType, assuming as NET::Normal

2, If you pin the setting windows, the bug would never happen.
Comment 3 Michail Vourlakos 2019-01-19 15:24:24 UTC
Git commit 42f6bef73859ba11b5787082ebde86f63e527b4b by Michail Vourlakos.
Committed on 19/01/2019 at 15:22.
Pushed by mvourlakos into branch 'master'.

dont close settings windows with no reason

--there were cases that the focusOutEvent from
secondary config window was sent before the
primary config window has become active. In that
case all config windows were closing with no
reason

M  +4    -0    app/view/settings/secondaryconfigview.cpp

https://commits.kde.org/latte-dock/42f6bef73859ba11b5787082ebde86f63e527b4b